Jeu_de_tests/error/readc.tpc
int main(void){
    int i;
    char *c;
    readc(i);
    readc(c);
    return 1;
}
